# s22_lecture08_finefibo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
finefibo/: fibo.py
tests/: conftest.py  test_fibo.py  test_tests.py
