[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "finefibo"
version = "1.2022.1"
description = "Fine Fibonacci numbers!"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["fibonacci", "recursive"]
license = {text = "MIT"}
authors = [ { name = "Nuno Fachada", email = "nuno.fachada@ulusofona.pt" } ]
dependencies = [ "numpy", "pandas" ] # Not really required

[project.scripts]
pyfibo = "finefibo.fibo:run_from_cli"

[project.optional-dependencies]
dev = [
    "pdoc",
    "pytest >= 6.0",
    "coverage",
    "pytest-cov >= 3.0.0" ]

[tool.setuptools]
packages = ["finefibo"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short --strict-markers"
testpaths = [ "tests" ]
#xfail_strict = "true"
markers = [
    "critical: The most critical tests",
    "get: Test functions which return some value",
    "fast: The fast tests" ]